[gd_scene load_steps=2 format=3 uid="uid://hsoxa02u8yqc"]

[ext_resource type="Script" path="res://AverageTime/AverageTime.gd" id="1"]

[node name="AverageTime" type="Control"]
layout_mode = 3
anchor_right = 0.324
anchor_bottom = 1.0
offset_right = -0.799988
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(520, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Button_Increment" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "+"

[node name="Button_Decrement" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "-"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1"
placeholder_text = "5"
max_length = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="Button_Calculate" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Calculate"

[node name="Button_Clear" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Clear"

[node name="LineEdit_Average" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
editable = false

[node name="Button_Copy" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/LineEdit_Average"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
tooltip_text = "Click to copy"
flat = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBox_Times" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/ScrollContainer/VBox_Times"]
layout_mode = 2
placeholder_text = "Time 1"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button_Increment" to="." method="_on_Button_Increment_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button_Decrement" to="." method="_on_Button_Decrement_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button_Calculate" to="." method="_on_Button_Calculate_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button_Clear" to="." method="_on_Button_Clear_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit_Average/Button_Copy" to="." method="_on_Button_Copy_pressed"]
